# SpatialVLA

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: dataset.py  obs_transforms.py  rlds.py  traj_transforms.py
data/oxe/: __init__.py  configs.py  mixtures.py  transforms.py
data/utils/: data_utils.py  droid_utils.py  goal_relabeling.py  task_augmentation.py
model/: __init__.py  action_tokenizer.py  configuration_spatialvla.py  modeling_ego3d.py  modeling_gemma2.py  modeling_spatialvla.py  processing_spatialvla.py
patch/: __init__.py  pad_data_collator.py
scripts/: action_config.json  gaussian_statistic_spatialvla_plus.json  gs_fractal.json  hf_download.sh  intrinsics_uni.json
scripts/spatialvla_4b_finetune/: finetune_full.sh  finetune_lora.sh
scripts/spatialvla_4b_pretrain/: slurm_pretrain.sh  torchrun_pretrain.sh
statistic/: bridge_orig.json  fractal20220817_data.json
test/: test_huggingface.py
train/: dist_utils.py  monkey_patch.py  spatialvla_finetune.py  spatialvla_pretrain.py  trainer_monkey_patch.py
